# QuantumForge

./: .gitignore  Dockerfile  Dockerfile.cpu  PROGRESS_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_backend_recovery.py  test_backend_simple.py
.copilot/: README.md  config.json
.copilot/prompts/: cuda_kernel.md  pytorch_functional.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled  docs.yml
docker/: Dockerfile.main  dev.Dockerfile  docker-compose.yml
docs/: project_plan.md
examples/: core_demo.py
scripts/: clean-docker.sh  dev-shell.sh  init-db.sql  make-executable.sh  run-tests.sh  setup-dev.sh  start-jupyter.sh  start-streamlit.sh  test_core.sh
src/quantumforge/: __init__.py
src/quantumforge/core/: __init__.py  functional_base.py  grid.py  operators.py
src/quantumforge/core/backends/: __init_clean__.py  adapters.py
src/quantumforge/cuda/: __init__.py
src/quantumforge/cuda/bindings/: __init__.py
src/quantumforge/cuda/ops/: __init__.py  fd_gradient.py  fd_gradient_binding.cpp  fd_gradient_kernel.cu  quadrature_batched.py  quadrature_batched_binding.cpp  quadrature_batched_kernel.cu
src/quantumforge/functionals/: __init__.py  gga.py  hybrid.py  lda.py  meta_gga.py
src/quantumforge/utils/: cuda_ops.py
temp-tests/: test_file_integrity.py  test_functionals.py
tests/core/: test_cuda_fd_gradient.py  test_cuda_ops_opcheck.py  test_cuda_quadrature_batched.py  test_functional_base.py
