[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pybind11>=2.11.0",
    "torch",
    "cmake>=3.21.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "quantumforge"
version = "0.1.0"
description = "GPU-accelerated DFT with deep-learning-based density functionals"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "QuantumForge Team", email = "team@quantumforge.org" }]
maintainers = [{ name = "QuantumForge Team", email = "team@quantumforge.org" }]
keywords = [
    "quantum-chemistry",
    "density-functional-theory",
    "machine-learning",
    "gpu-acceleration",
    "cuda",
    "pytorch",
    "computational-chemistry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: Other",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.7.0",
    "pyscf>=2.1.0",
    "typer>=0.7.0",
    "streamlit>=1.25.0",
    "pydantic>=1.10.0",
    "loguru>=0.6.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "matplotlib>=3.5.0",
    "plotly>=5.15.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.8.0",
    "redis>=4.3.0",
    "boto3>=1.26.0",
    "mlflow>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    # Constrain ipython for Python 3.8 compatibility (matches requirements-dev.txt)
    "ipython>=7.34.0,<8.13.0",
    "ipywidgets>=8.0.0",
    "pybind11>=2.11.0",
    "cmake>=3.21.0",
    "ninja>=1.11.0",
    "line_profiler>=4.0.0",
    "memory_profiler>=0.61.0",
    "py-spy>=0.3.0",
    "factory_boy>=3.3.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.0",
]
cuda = ["cupy-cuda11x>=12.0.0", "nvidia-ml-py>=11.495.46"]
all = ["quantumforge[dev,docs,cuda]"]

[project.urls]
Homepage = "https://github.com/your-username/QuantumForge"
Documentation = "https://quantumforge.readthedocs.io"
Repository = "https://github.com/your-username/QuantumForge.git"
"Bug Tracker" = "https://github.com/your-username/QuantumForge/issues"
Changelog = "https://github.com/your-username/QuantumForge/blob/main/CHANGELOG.md"

[project.scripts]
quantumforge = "quantumforge.cli:main"
qf = "quantumforge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantumforge*"]

[tool.setuptools.package-data]
quantumforge = [
    "data/*.json",
    "data/*.yaml",
    "cuda/ops/*.cu",
    "cuda/ops/*.cpp",
    "cuda/ops/*.cuh",
    "gui/templates/*.html",
    "gui/static/*.css",
    "gui/static/*.js",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["quantumforge"]
known_third_party = ["torch", "numpy", "scipy", "pyscf", "streamlit", "typer"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    'build/',
    'dist/',
    '\.eggs/',
    '\.git/',
    '\.mypy_cache/',
    '\.pytest_cache/',
    '\.tox/',
    '\.venv/',
    '__pycache__/',
]

[[tool.mypy.overrides]]
module = ["pyscf.*", "h5py.*", "plotly.*", "streamlit.*", "cupy.*", "mlflow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/quantumforge"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
    "*/setup.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]
